聚合项目加入javaFx 制作托盘